--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -152,17 +152,7 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
+.benefits h2 {
     margin-bottom: 10px;
     text-align: center;
 }
