--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,4 @@
+/* GENERAL STYLINGS START */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -16,6 +17,7 @@ a {
 p {
     font-size: 16px;
 }
+/* GENERAL STYLINGS END */
 
 /* HEADER START */
 .header {
